# CMakePrototypes

ex1-HelloWorld/: CMakeLists.txt  main.cpp
ex2-SourceFiles/: CMakeLists.txt  main.cpp
ex3-BuildingLibrary/: CMakeLists.txt  main.cpp
ex3-BuildingLibrary/src/: CMakeLists.txt
ex3-BuildingLibrary/src/math/: OperationsTricks.cpp  OperationsTricks.hpp
ex4-SeparateModules/: CMakeLists.txt  main.cpp
ex4-SeparateModules/include/: CMakeLists.txt  Types.hpp
ex4-SeparateModules/src/: CMakeLists.txt
ex4-SeparateModules/src/math/: OperationsTricks.cpp
